--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav>
         <h2>Butikk</h2>
         <div id="flex-container">
-            <div id="kjopBurger" onclick="if(spillPå){kjopMat(20, 10)}">
+            <div id="kjopNewEnergy" onclick="if(spillPå){kjopMat(20, 10)}">
                 mat 20
             </div>
             <div id="kjopBurger" onclick="if(spillPå){kjopMat(100, 100)}">
@@ -54,9 +54,9 @@
 
         <div id="velgNyDiv">
             <h3>Velg nytt mål</h3>
-            <button id="velgBodo" onclick="if(spillPå){velgNyttMal(besokteByer, 1)}">Bodø</button>
-            <button id="velgTrondheim" onclick="if(spillPå){velgNyttMal(besokteByer, 2)}">Trondheim</button>
-            <button id="velgOslo" onclick="if(spillPå){velgNyttMal(besokteByer, 3)}">Oslo</button>
+            <button id="velgBodo" onclick="velgNyttMal(besokteByer, 1)">Bodø</button>
+            <button id="velgTrondheim" onclick="velgNyttMal(besokteByer, 2)">Trondheim</button>
+            <button id="velgOslo" onclick="velgNyttMal(besokteByer, 3)">Oslo</button>
         </div>
 
     </main>
